[package]
name = "questdb-rs-ffi"
version = "7.0.0"
edition = "2024"
publish = false

[lib]
name = "questdb_client"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
questdb-confstr-ffi = { version = "0.1.1", optional = true }
arrow = { version = "58", optional = true, default-features = false, features = ["ffi"] }
arrow-array = { version = "58", optional = true, default-features = false }

[dependencies.questdb-rs]
path = "../questdb-rs"
default-features = false
features = [
    "ring-crypto",
    "tls-webpki-certs",
    "tls-native-certs",
    "sync-sender",
]

[features]
# No default features. Existing consumers who only want the line sender
# get exactly that — the egress reader is opt-in. Enable
# `sync-reader-ws` explicitly (in Cargo.toml or via `--features`) to
# bring the `reader_*` symbols back in.
default = []
# Expose the config parsing C API.
# This used by `py-questdb-client` to parse the config file.
# It is exposed here to avoid having multiple copies of the `questdb-confstr`
# crate in the final binary.
confstr-ffi = ["dep:questdb-confstr-ffi"]
# Expose the synchronous WebSocket egress reader API (`reader_*`).
# Forwarded to the upstream `questdb-rs` feature of the same name.
# Opt-in (NOT a default feature) so existing builds of `questdb-rs-ffi`
# don't silently grow ~70 new exported symbols + a WebSocket transport
# dependency. The in-tree CMake build enables it via
# `corrosion_import_crate(FEATURES sync-reader-ws ...)`.
sync-reader-ws = ["questdb-rs/sync-reader-ws", "questdb-rs/compression-zstd"]

# Apache Arrow integration (egress + ingress over QWP/WS). Adds the
# `reader_cursor_next_arrow_batch` C export (egress) and the
# `column_sender_chunk_append_arrow_column` / `column_sender_flush_arrow_batch[_at_column]`
# exports (ingress), plus the Arrow C Data Interface struct
# declarations. See `doc/QUESTDB_ARROW_INTEGRATION_DESIGN.md`.
arrow = [
    "sync-reader-ws",
    "questdb-rs/arrow",
    "questdb-rs/sync-sender-qwp-ws",
    "dep:arrow",
    "dep:arrow-array",
]
# Compile in support for the `tls_verify=unsafe_off` connect-string knob.
# Off by default: a shipped C ABI binary should not silently allow
# downstream callers to disable certificate verification. Distributions
# that need the escape hatch (test harnesses, MITM debuggers) opt in via
# `--features insecure-skip-verify`; the in-tree CMake build exposes a
# `QUESTDB_ENABLE_INSECURE_SKIP_VERIFY` option (also off by default).
insecure-skip-verify = ["questdb-rs/insecure-skip-verify"]

# Abort on panic. A panic that unwinds across the C FFI boundary is
# undefined behaviour, and this crate's surface is too wide to wrap every
# upstream call site in `catch_unwind`. Aborting is the standard policy
# for `cdylib` FFI crates: any panic — debug assertion, arithmetic on
# attacker-controlled wire data, slice indexing, custom allocator OOM —
# terminates the process cleanly instead of unwinding into C.
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.dev.package."*"]
debug = false

[profile.test.package."*"]
debug = false
