[package]
name = "questdb-rs-ffi"
version = "7.0.0"
edition = "2024"
rust-version = "1.91.1"
publish = false

[lib]
name = "questdb_client"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
questdb-confstr-ffi = { version = "0.1.1", optional = true }
arrow = { version = ">=58, <60", optional = true, default-features = false, features = ["ffi"] }

[dependencies.questdb-rs]
path = "../questdb-rs"
default-features = false
features = [
    "ring-crypto",
    "tls-webpki-certs",
    "tls-native-certs",
    "sync-sender",
    # QWP/UDP is no longer part of the `sync-sender` umbrella (best-effort,
    # no auth/TLS) — the C ABI exposes every transport, so request it here.
    "sync-sender-qwp-udp",
    # Egress reader (queries), on the same footing as the senders: the C ABI
    # always exposes the `reader_*` surface, so it is hardwired here rather
    # than gated behind a feature. Pulls in the WS reader + zstd decode.
    "sync-reader",
    # Owned (lifetime-free) pool handles + their borrow entry points. C / Python
    # cannot express Rust lifetimes, so the C ABI hands out owned handles via
    # `questdb::ffi_support` instead of the lifetime-bound `Borrowed*` handles.
    "ffi-support",
]

[features]
# No default features. The `reader_*` egress surface is NOT opt-in: like the
# senders it is always compiled in (see the `sync-reader` entry in the pinned
# `questdb-rs` features above), so no feature toggles it.
default = []
# Expose the config parsing C API.
# This used by `py-questdb-client` to parse the config file.
# It is exposed here to avoid having multiple copies of the `questdb-confstr`
# crate in the final binary.
confstr-ffi = ["dep:questdb-confstr-ffi"]

# Apache Arrow integration (egress + ingress over QWP/WS). Adds the
# `reader_cursor_next_arrow_batch` C export (egress) and the
# `column_sender_chunk_append_arrow_column` / `qwp_sender_flush_arrow_batch[_at_column]`
# exports (ingress), plus the Arrow C Data Interface struct
# declarations. The reader is always present; Arrow only adds its
# conversions. See `doc/QUESTDB_ARROW_INTEGRATION_DESIGN.md`.
arrow = [
    "questdb-rs/arrow",
    "dep:arrow",
]
# Compile in support for the `tls_verify=unsafe_off` connect-string knob.
# Off by default: a shipped C ABI binary should not silently allow
# downstream callers to disable certificate verification. Distributions
# that need the escape hatch (test harnesses, MITM debuggers) opt in via
# `--features insecure-skip-verify`; the in-tree CMake build exposes a
# `QUESTDB_ENABLE_INSECURE_SKIP_VERIFY` option (also off by default).
insecure-skip-verify = ["questdb-rs/insecure-skip-verify"]

# Abort on panic. A panic that unwinds across the C FFI boundary is
# undefined behaviour, and this crate's surface is too wide to wrap every
# upstream call site in `catch_unwind`. Aborting is the standard policy
# for `cdylib` FFI crates: any panic — debug assertion, arithmetic on
# attacker-controlled wire data, slice indexing, custom allocator OOM —
# terminates the process cleanly instead of unwinding into C.
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.dev.package."*"]
debug = false

[profile.test.package."*"]
debug = false
