[package]
name = "questdb-rs"
version = "6.1.0"
edition = "2024"
license = "Apache-2.0"
description = "QuestDB Client Library for Rust"
homepage = "https://questdb.com/"
repository = "https://github.com/questdb/c-questdb-client"
keywords = ["questdb", "ilp", "client-library"]
categories = ["database"]
authors = ["Adam Cimarosti <adam@questdb.io>"]

[package.metadata.docs.rs]
features = ["almost-all-features"]

[lib]
name = "questdb"
crate-type = ["lib"]

[dependencies]
libc = "0.2"
socket2 = { version = "0.6.1", optional = true }
dns-lookup = "3.0.0"
base64ct = { version = "1.7", features = ["alloc"] }
ryu = { version = "1.0" }
itoa = "1.0"
# Used in the QWP egress decoder for zero-copy slicing of frame
# payloads. Pulled in transitively via the `_egress` feature so a
# sender-only build (`--no-default-features --features sync-sender`)
# does not download or compile this crate.
bytes = { version = "1.7", optional = true }
aws-lc-rs = { version = "1.13", optional = true }
ring = { version = "0.17.14", optional = true }
rustls-pki-types = "1.12.0"
rustls = { version = "0.23.25", default-features = false, features = ["logging", "std", "tls12"] }
rustls-native-certs = { version = "0.8.2", optional = true }
webpki-roots = { version = "1.0.3", default-features = false, optional = true }
chrono = { version = "0.4.40", optional = true }

# We need to limit the `ureq` version to 3.0.x since we use
# the `ureq::unversioned` module which does not respect semantic versioning.
ureq = { version = "3.1.2, <3.2.0", default-features = false, optional = true }
serde_json = { version = "1", optional = true }
questdb-confstr = "0.1.1"
rand = { version = "0.9.0", optional = true }
ndarray = { version = "0.16", optional = true }
rust_decimal = { version = "1.38.0", optional = true }
bigdecimal = { version = "0.4.8", optional = true }

# Sync WebSocket transport for QWP egress reader.
tungstenite = { version = "0.27", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"], optional = true }
zstd = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["ws2def"] }

[build-dependencies]
serde_json = { version = "1.0.108" }
serde = { version = "1.0.193", features = ["derive"] }
slugify = "0.1.0"
indoc = "2"

[dev-dependencies]
socket2 = "0.6.1"
mio = { version = "1", features = ["os-poll", "net"] }
chrono = "0.4.31"
tempfile = "3"
webpki-roots = "1.0.1"
rstest = "0.26.1"
tungstenite = { version = "0.27", default-features = false, features = ["handshake"] }
ureq = { version = "3.1.2, <3.2.0", default-features = false }
# Bench harness for `benches/decoder.rs`. `default-features=false` skips
# `rayon` (criterion's parallel sample analyser) — the bench runs
# sequentially anyway and skipping rayon cuts the dev-dep tree.
criterion = { version = "0.5", default-features = false }

[features]
default = ["sync-sender", "tls-webpki-certs", "ring-crypto"]

## Sync ILP/TCP + ILP/HTTP Sender
sync-sender = ["sync-sender-tcp", "sync-sender-http"]

## Sync ILP/TCP
sync-sender-tcp = ["_sync-sender", "_sender-tcp", "dep:socket2"]

## Sync ILP/HTTP
sync-sender-http = [
    "_sync-sender",
    "_sender-http",
    "dep:ureq",
    "dep:serde_json",
    "dep:rand",
]

## Allow use OS-provided root TLS certificates
tls-native-certs = ["dep:rustls-native-certs"]

## Allow use of the `webpki-roots` crate to validate TLS certificates.
tls-webpki-certs = ["dep:webpki-roots"]

## Use `aws-lc-rs` as the cryto library.
aws-lc-crypto = ["dep:aws-lc-rs", "rustls/aws-lc-rs"]

## Use `ring` as the crypto library.
ring-crypto = ["dep:ring", "rustls/ring"]

## Allow skipping verification of insecure certificates.
insecure-skip-verify = []

## Enable rustls' `KeyLogFile`. When enabled, the client honors the
## `SSLKEYLOGFILE` environment variable and writes per-session TLS
## secrets to that path — letting Wireshark / tshark decrypt captures.
## Off by default: an attacker with write access to the user's
## environment (CI matrix, debug shell, container env, systemd unit)
## could otherwise siphon secrets without any in-process opt-in.
tls-key-log = []

## Enable code-generation in `build.rs` for additional tests.
json_tests = ["bigdecimal"]

## Enable methods to create timestamp objects from chrono::DateTime objects.
chrono_timestamp = ["chrono"]

## Enable serialization of rust_decimal::Decimal in ILP
rust_decimal = ["dep:rust_decimal"]

## Enable serialization of bigdecimal::BigDecimal in ILP
bigdecimal = ["dep:bigdecimal"]

## Sync QWP egress reader over WebSocket (plain `ws://`). Does NOT
## pull in `compression-zstd`: zstd is opt-in. Without it, the decoder
## still compiles but rejects `FLAG_ZSTD` batches at runtime with an
## `UnsupportedServer` error.
sync-reader-ws = ["_egress", "dep:tungstenite"]

## Decompression for `FLAG_ZSTD` `RESULT_BATCH` payloads.
compression-zstd = ["_egress", "dep:zstd"]

## Run integration tests against a real QuestDB server launched from the
## `questdb/` submodule. Requires JDK 25 + Maven and a built jar at
## `../questdb/core/target/questdb-*-SNAPSHOT.jar`.
live-server-tests = ["sync-reader-ws", "compression-zstd", "sync-sender-http"]

# Hidden derived features, used in code to enable-disable code sections. Don't use directly.
_sender-tcp = []
_sender-http = []
_sync-sender = []
_egress = ["dep:bytes"]

## Enable all cross-compatible features.
## The `aws-lc-crypto` and `ring-crypto` features are mutually exclusive,
## thus compiling with `--all-features` will not work.
## Instead use `--features almost-all-features`.
## This is useful for quickly running `cargo test` or `cargo clippy`.
almost-all-features = [
    "sync-sender",
    "sync-reader-ws",
    "compression-zstd",
    "tls-webpki-certs",
    "tls-native-certs",
    "ring-crypto",
    "insecure-skip-verify",
    "json_tests",
    "chrono_timestamp",
    "ndarray",
    "rust_decimal",
    "bigdecimal",
]

[[example]]
name = "basic"
required-features = ["chrono_timestamp", "ndarray"]

[[example]]
name = "auth"
required-features = ["chrono_timestamp"]

[[example]]
name = "auth_tls"
required-features = ["chrono_timestamp"]

[[example]]
name = "http"
required-features = ["sync-sender-http", "ndarray", "rust_decimal"]

[[example]]
name = "protocol_version"
required-features = ["sync-sender-http", "ndarray", "bigdecimal"]

[[example]]
name = "qwp_egress_latency"
required-features = ["sync-reader-ws"]

[[example]]
name = "qwp_egress_failover"
required-features = ["sync-reader-ws"]

[[example]]
name = "qwp_egress_read_wide"
required-features = ["sync-reader-ws", "sync-sender-http"]

# Decoder microbenchmark anchoring the perf claims from commits
# `8ec0a85` (zero-copy decode) and `1163d43` (tighter SYMBOL/VARCHAR
# decode hot paths). Run with:
#
#   cargo bench --features sync-reader-ws --bench decoder
#
# The default row count (configurable via `QUESTDB_BENCH_ROWS`) is
# below the per-batch wire cap so the bench iterates fast on CI; set
# `QUESTDB_BENCH_ROWS=1000000` to reproduce the PR's 1M-row-per-batch
# workload directly.
[[bench]]
name = "decoder"
harness = false
required-features = ["sync-reader-ws"]
